# python-a-fondo

./: pyproject.toml
